tests/fixtures/fail/borrow_type_kind_mismatch.sali
let main(): i32 = {
  let value = 42
  let alias: mut borrow i32 = borrow value
  alias
}
